clean hacker rank linked list